...
    state = AsyncValue<ExtractUiState>.data(
      latest.copyWith(
        children: await _reloadChildren(latest.extract.id),
        shouldClearLastExtract: true,
        isBusy: false,
        message: result.fold(
          (_) => const UiMessage('Extract removed'),
          (AppFailure failure) => UiMessage(failure.message, isError: true),
        ),
      ),
    );
  }

...
